--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
     </section>
     <section id="muirapinima">
       <div class="tribo-muira texto">
-        <h3>Tribo Munduruku</h3>
+        <h3>Tribo Muirapinima</h3>
         <p>
           A Associação Folclórica Cultural e Recreativa Tribo Muirapinima
           apresentou-se pela primeira vez no dia 17 de junho de 1995, como
