--- a/index.html
+++ b/index.html
@@ -5,8 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Espaço Festribal</title>
-
+    <!-- CSS only -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="./style.css" />
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 
@@ -14,7 +21,12 @@
       href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
       rel="stylesheet"
     />
-
+    <!-- JavaScript Bundle with Popper -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+      crossorigin="anonymous"
+    ></script>
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"
       integrity="sha512-qTXRIMyZIFb8iQcfjXWCO8+M5Tbc38Qi5WzdPOYZHIlZpzBHG3L3by84BBBOiRGiEb7KKtAOAs5qYdUiZiQNNQ=="
@@ -30,22 +42,6 @@
   </head>
   <body>
     <header>
-      <!-- <svg
-        width="1366"
-        height="133"
-        viewBox="0 0 1366 133"
-        fill="none"
-        xmlns="http://www.w3.org/2000/svg"
-      >
-        <path
-          fill-rule="evenodd"
-          clip-rule="evenodd"
-          d="M1366 0H0V27.6503C79.0078 49.9323 172.154 69.6349 261.729 85.4662C372.219 104.994 481.981 108.913 592.365 112.854L592.365 112.854L592.366 112.854C635.236 114.385 678.2 115.919 721.337 118.372C749.93 119.998 779.133 122.067 808.302 124.134L808.302 124.134C896.408 130.376 984.192 136.596 1053.85 130.511C1119.23 124.8 1150.1 108.243 1181.04 91.6541C1191.39 86.1002 1201.76 80.5429 1213.42 75.3877C1230.71 67.7491 1241.26 58.8166 1251.75 49.9279C1265.59 38.2065 1279.34 26.5613 1308.34 18.0602C1324.57 13.3029 1344.23 9.33452 1366 5.86685V0Z"
-          fill="#f1bd03"
-          fill-opacity="1"
-        />
-      </svg> -->
-
       <nav id="navigation">
         <div id="logo">
           <img src="./images/Onde Term - Logo2.png" alt="" />
@@ -105,8 +101,9 @@
     </section>
 
     <section id="juruti" class="content">
-      <div id="cidade">
+      <div id="cidade" class="imagem">
         <h3>Juruti</h3>
+        <img src="./images/juruti.jpeg" alt="" />
         <p class="texto">
           Localizada a margem direita do rio amazonas, em uma área de 8.305,454
           quilômetros quadrados, juruti e contornada de beleza e encantos. No
@@ -149,72 +146,77 @@
     <section id="historia">
       <div class="texto-historia">
         <h3>História do Festribal</h3>
-        <div class="texto">
-          <p class="bloco-branco">
-            O Festribal nasceu de uma ramificação do Festival Folclórico de
-            Juruti, onde se apresentavam cordões de pássaros, quadrilhas,
-            bumba-meu-boi e carimbó. Em 1993, surge uma dança indígena de nome
-            "Tribo Munduruku”, que, mesmo tendo coreografia indígena, competiu
-            com o Grupo Folclórico “Ou Vai ou Racha” (que se apresentava com
-            mesclagens de danças como carimbó, xote, quadrilhas e outras), sendo
-            que o resultado oficial foi empate naquele ano.
-          </p>
-          <p class="bloco-vermelho">
-            Em 1994 não houve competição entre o Grupo Folclórico “Ou Vai ou
-            Racha” e a Associação Folclórica “Tribo Munduruku”, sendo que as
-            duas não se apresentaram no Festival Folclórico de Juruti, mas
-            realizaram apresentações separadas. O Grupo Folclórico “Ou Vai ou
-            Racha” apresentou-se na quadra da Praça da República e a Associação
-            Folclórica “Tribo Munduruku” na quadra da Escola Estadual Deputado
-            Américo Pereira Lima.
-          </p>
-          <p class="bloco-branco">
-            Em 1995, a professora Aurecilia da Silva Andrade ministrava a
-            disciplina de técnicas de redação e expressão na Escola Américo
-            Pereira Lima e solicitou aos alunos um trabalho sobre tribos
-            indígenas. O trabalho foi apresentado em forma de danças e
-            coreografias indígenas na quadra da escola, denominada Dança do
-            Fogo. A apresentação teve boa repercussão e público. Naquele mesmo
-            ano, no mês de julho, o grupo de dança foi convidado a se apresentar
-            no FestivalFolclórico de Juruti, denominando-se como “Tribo
-            Muirapinima”, gerando oficialmente a primeira competição entre as
-            tribos Munduruku e Muirapinima.
-          </p>
-          <p class="bloco-vermelho">
-            A festa retrata a cultura indígena em forma de música, artes
-            cênicas, alegorias e danças. O modo de vida do caboclo, os rituais
-            indígenas, o pescador e o farinheiro são algumas das inspirações do
-            festival. Atualmente o Festival Folclórico das Tribos Indígenas de
-            Juruti, conhecido popularmente por Festribal, é considerado um
-            importante instrumento de fomento ao turismo na região. É um evento
-            democrático de ampla participação popular, que incentiva a expressão
-            artística e contribui para a difusão da cultura e para o
-            desenvolvimento regional, contando com elementos indígenas, da fauna
-            local e musicalidade própria. Fortalecendo como uma das maiores
-            manifestações culturais do Estado do Pará, pois é um evento que
-            agrega criatividade, originalidade e autenticidade, desta forma visa
-            a valorização da produção artesanal, o turismo, a cultura indígena,
-            os artistas locais e regionais, dentre outros. Em decorrência da
-            grandeza do evento, há uma participação quase na sua totalidade da
-            população de Juruti. Desde 2008 o Festival Folclórico das Tribos
-            Indígenas de Juruti é considerado Patrimônio Cultural do Pará pela
-            Lei Estadual nº 7.112, de 19 de março de 2008; e desde 2011, pela
-            Lei Municipal nº 1.010/2011, de 23 de setembro de 2011, foi
-            declarado e reconhecido como Patrimônio Cultural do Município de
-            Juruti.
-          </p>
-          <p class="bloco-branco">
-            Sua realização ocorre no último final de semana do mês de julho,
-            onde as duas tribos, Munduruku (vermelha e amarela) e Muirapinima
-            (vermelho e azul), são responsáveis por um verdadeiro espetáculo a
-            céu aberto em um espaço. cultural denominado Tribódromo para fazer
-            uma apresentação de 3 (três) horas de duração, onde é recriado um
-            cenário totalmente folclórico voltado à cultura indígena. Com isso,
-            a arte da criação tem como fundamento o fortalecimento da tradição
-            indígena, sempre valorizando a cultura local, dando oportunidade aos
-            que buscam na arte um modo de vivência diferente, promovendo a
-            interação social, inclusão e sustentabilidade.
-          </p>
+        <div class="historia">
+          <div class="bloco-branco">
+            <p>
+              O Festribal nasceu de uma ramificação do Festival Folclórico de
+              Juruti, onde se apresentavam cordões de pássaros, quadrilhas,
+              bumba-meu-boi e carimbó. Em 1993, surge uma dança indígena de nome
+              "Tribo Munduruku”, que, mesmo tendo coreografia indígena, competiu
+              com o Grupo Folclórico “Ou Vai ou Racha” (que se apresentava com
+              mesclagens de danças como carimbó, xote, quadrilhas e outras),
+              sendo que o resultado oficial foi empate naquele ano.
+            </p>
+            <p>
+              Em 1994 não houve competição entre o Grupo Folclórico “Ou Vai ou
+              Racha” e a Associação Folclórica “Tribo Munduruku”, sendo que as
+              duas não se apresentaram no Festival Folclórico de Juruti, mas
+              realizaram apresentações separadas. O Grupo Folclórico “Ou Vai ou
+              Racha” apresentou-se na quadra da Praça da República e a
+              Associação Folclórica “Tribo Munduruku” na quadra da Escola
+              Estadual Deputado Américo Pereira Lima.
+            </p>
+            <p>
+              Em 1995, a professora Aurecilia da Silva Andrade ministrava a
+              disciplina de técnicas de redação e expressão na Escola Américo
+              Pereira Lima e solicitou aos alunos um trabalho sobre tribos
+              indígenas. O trabalho foi apresentado em forma de danças e
+              coreografias indígenas na quadra da escola, denominada Dança do
+              Fogo. A apresentação teve boa repercussão e público. Naquele mesmo
+              ano, no mês de julho, o grupo de dança foi convidado a se
+              apresentar no FestivalFolclórico de Juruti, denominando-se como
+              “Tribo Muirapinima”, gerando oficialmente a primeira competição
+              entre as tribos Munduruku e Muirapinima.
+            </p>
+          </div>
+
+          <div class="bloco-vermelho">
+            <p>
+              A festa retrata a cultura indígena em forma de música, artes
+              cênicas, alegorias e danças. O modo de vida do caboclo, os rituais
+              indígenas, o pescador e o farinheiro são algumas das inspirações
+              do festival. Atualmente o Festival Folclórico das Tribos Indígenas
+              de Juruti, conhecido popularmente por Festribal, é considerado um
+              importante instrumento de fomento ao turismo na região. É um
+              evento democrático de ampla participação popular, que incentiva a
+              expressão artística e contribui para a difusão da cultura e para o
+              desenvolvimento regional, contando com elementos indígenas, da
+              fauna local e musicalidade própria. Fortalecendo como uma das
+              maiores manifestações culturais do Estado do Pará, pois é um
+              evento que agrega criatividade, originalidade e autenticidade,
+              desta forma visa a valorização da produção artesanal, o turismo, a
+              cultura indígena, os artistas locais e regionais, dentre outros.
+              Em decorrência da grandeza do evento, há uma participação quase na
+              sua totalidade da população de Juruti. Desde 2008 o Festival
+              Folclórico das Tribos Indígenas de Juruti é considerado Patrimônio
+              Cultural do Pará pela Lei Estadual nº 7.112, de 19 de março de
+              2008; e desde 2011, pela Lei Municipal nº 1.010/2011, de 23 de
+              setembro de 2011, foi declarado e reconhecido como Patrimônio
+              Cultural do Município de Juruti.
+            </p>
+            <p>
+              Sua realização ocorre no último final de semana do mês de julho,
+              onde as duas tribos, Munduruku (vermelha e amarela) e Muirapinima
+              (vermelho e azul), são responsáveis por um verdadeiro espetáculo a
+              céu aberto em um espaço. cultural denominado Tribódromo para fazer
+              uma apresentação de 3 (três) horas de duração, onde é recriado um
+              cenário totalmente folclórico voltado à cultura indígena. Com
+              isso, a arte da criação tem como fundamento o fortalecimento da
+              tradição indígena, sempre valorizando a cultura local, dando
+              oportunidade aos que buscam na arte um modo de vivência diferente,
+              promovendo a interação social, inclusão e sustentabilidade.
+            </p>
+          </div>
         </div>
       </div>
     </section>
@@ -288,9 +290,92 @@
         </p>
       </div>
     </section>
-    <div id="voltar">
-      <button></button>
-    </div>
+    <section id="fotos">
+      <div class="carrossel">
+        <div
+          id="carouselExampleIndicators"
+          class="carousel slide"
+          data-bs-ride="true"
+        >
+          <div class="carousel-indicators">
+            <button
+              type="button"
+              data-bs-target="#carouselExampleIndicators"
+              data-bs-slide-to="0"
+              class="active"
+              aria-current="true"
+              aria-label="Slide 1"
+            ></button>
+            <button
+              type="button"
+              data-bs-target="#carouselExampleIndicators"
+              data-bs-slide-to="1"
+              aria-label="Slide 2"
+            ></button>
+            <button
+              type="button"
+              data-bs-target="#carouselExampleIndicators"
+              data-bs-slide-to="2"
+              aria-label="Slide 3"
+            ></button>
+            <button
+              type="button"
+              data-bs-target="#carouselExampleIndicators"
+              data-bs-slide-to="3"
+              aria-label="Slide 4"
+            ></button>
+          </div>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img
+                src="./fotos/296948460_5317378591714233_9010723025185815512_n.jpg"
+                class="d-block w-100"
+                alt="..."
+              />
+            </div>
+            <div class="carousel-item">
+              <img
+                src="./fotos/297562594_5373355712755113_1198857760000821355_n.jpg"
+                class="d-block w-100"
+                alt="..."
+              />
+            </div>
+            <div class="carousel-item">
+              <img
+                src="./fotos/298280271_5383856841705000_5630528631073748421_n.jpg"
+                class="d-block w-100"
+                alt="..."
+              />
+            </div>
+            <div class="carousel-item">
+              <img
+                src="./fotos/299761312_5356523151133110_586597700250684834_n.jpg"
+                class="d-block w-100"
+                alt="..."
+              />
+            </div>
+          </div>
+          <button
+            class="carousel-control-prev"
+            type="button"
+            data-bs-target="#carouselExampleIndicators"
+            data-bs-slide="prev"
+          >
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button
+            class="carousel-control-next"
+            type="button"
+            data-bs-target="#carouselExampleIndicators"
+            data-bs-slide="next"
+          >
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
+      </div>
+    </section>
     <footer>
       <p>Desenvolvido por <a href=""> Wernen Veiga</a> &COPY;</p>
     </footer>
